# citclo

./: .gitignore  CMakeLists.txt  README.md
include/citclo/: ack.h  data_source.h  data_storage.h  data_store.h  in_gateway.h  linear_regression_strategy.h  message_bus.h  order_data.h  order_management_system.h  out_gateway.h  signal_generator.h  ticker_data.h
include/citclone/: data_source.h
src/: data_source.cpp  data_store.cpp  in_gateway.cpp  linear_regression.cpp  main.cpp  order_management_system.cpp  out_gateway.cpp
